remove animation on mobile to avoid weird behavior on nexus

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -242,6 +242,10 @@ a.mail i:before {font-size: 150%;}
 
   #card {
     margin: 20px 0;
+    -webkit-animation: none;
+    -moz-animation: none;
+    -o-animation: none;
+    animation: none;
   }
 
   #header{
